Add PDF generation and email sending functionality
- Updated package.json to include necessary dependencies: cors, dotenv, express, nodemailer, pdfkit, and others.
- Created a new route (pdfgen.js) for generating a PDF with tourist information and sending it via email.
- Implemented error handling for PDF creation and email sending processes.
- Ensured that temporary PDF files are deleted after sending the email.

--- a/client/package.json
+++ b/client/package.json
@@ -14,8 +14,10 @@
     "@tailwindcss/vite": "^4.1.12",
     "dotenv": "^17.2.1",
     "ethers": "^6.15.0",
+    "qrcode.react": "^4.2.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
