--- a/client/package.json
+++ b/client/package.json
@@ -14,9 +14,14 @@
     "@tailwindcss/vite": "^4.1.12",
     "dotenv": "^17.2.1",
     "ethers": "^6.15.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.2",
+    "lucide-react": "^0.542.0",
     "qrcode.react": "^4.2.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.8.2",
     "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.12"
   },
