--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nomicfoundation/hardhat-ethers": "^3.1.0",
     "@tailwindcss/vite": "^4.1.12",
+    "axios": "^1.11.0",
     "dotenv": "^17.2.1",
     "ethers": "^6.15.0",
     "html2canvas": "^1.4.1",
@@ -23,7 +24,8 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.2",
     "react-toastify": "^11.0.5",
-    "tailwindcss": "^4.1.12"
+    "tailwindcss": "^4.1.12",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
