--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,8 @@
     "nodemailer": "^7.0.6",
     "path": "^0.12.7",
     "pdfkit": "^0.17.2",
+    "request": "^2.88.2",
+    "twilio": "^5.8.2",
     "util": "^0.12.5"
   }
 }
