--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.2",
     "react-toastify": "^11.0.5",
+    "react-type-animation": "^3.2.0",
     "tailwindcss": "^4.1.12",
     "zustand": "^5.0.8"
   },
